Fix Line icon vertical alignment with other social icons
- Add vertical-align: middle to Line icon
- Add line-height: 1 for better baseline alignment
- Line icon now properly aligns with Facebook icon

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -213,4 +213,6 @@ body.is-line-visible {
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
+	vertical-align: middle;
+	line-height: 1;
 }
